--- a/web/tln.css
+++ b/web/tln.css
@@ -1,3 +1,13 @@
+* {
+  font-family: "Roboto Mono", monospace;
+  line-height: 1;
+}
+
+.wrapper, html, body {
+    height: 100%;
+    margin: 0;
+}
+
 .button {
   background-color: #008CBA;
   margin: 8px;
@@ -33,16 +43,11 @@
   cursor: not-allowed;
 }
 
-#log_text p{
-  margin: 0;
-  font-family: "Courier New", Courier, monospace;
-}
-
 #output_text p{
   margin: 0;
   margin-left: 8px;
-  font-size: 2em;
-  font-family: "Courier New", Courier, monospace;
+  font-size: 1.5em;
+  font-family: "Roboto Mono", monospace;
 }
 
 .flex-container-v{
